--- a/src/app.scss
+++ b/src/app.scss
@@ -1,6 +1,9 @@
-$primary-500: #ff4e00;
+
+/*
+$primary-500: #b22b00;
 $primary-600: #ff3e00;
-$primary-700: #cc3100;
+$primary-700: #ff7000;
+*/
 
 @import '@picocss/pico/scss/pico';
 
